--- a/Sprint-3/Curso-Python/Exercicios/testes.ipynb
+++ b/Sprint-3/Curso-Python/Exercicios/testes.ipynb
@@ -420,18 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "254.52\n",
-      "492\n",
-      "[10, 110, 429, 100, 75, 99, 415, 320, 399, 101, 434, 381, 311, 206, 153, 177, 457, 163, 354, 377, 208, 1, 219, 382, 102, 20, 427, 159, 327, 430, 303, 108, 18, 483, 235, 200, 473, 451, 227, 41, 405, 270, 492, 439, 472, 80, 373, 154, 129, 27]\n",
-      "231.0\n"
+      "Media: 235.76, Mediana: 219.0, Mínimo: 2, Máximo: 477\n"
      ]
     }
    ],
@@ -468,6 +464,131 @@
     "a = [1, 0, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n",
     "\n",
     "print(a[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#desafio ETL\n",
+    "\n",
+    "with open(\"DESAFIO-ETL/actors.csv\", \"r\") as f:\n",
+    "  arquivo = f.read()\n",
+    "  linhas = arquivo.split(\"\\n\")[1:]\n",
+    "\n",
+    "# carrega cada linha\n",
+    "for linha in linhas:\n",
+    "# divide em colunas\n",
+    "   colunas = linha.split(',')\n",
+    "   ator = colunas[0]\n",
+    "   Total_bruto = (colunas[1])\n",
+    "   N_filmes = (colunas[2])\n",
+    "   media_filme = (colunas[3])\n",
+    "   primeiro_filme = colunas[4]\n",
+    "   bruto = (colunas[5])\n",
+    "# Actor,Total Gross,Number of Movies,Average per Movie,#1 Movie,Gross\n",
+    "\n",
+    "#extrair pessoa com maior numero de filmes e o respectivo números de filmes\n",
+    "\n",
+    "  # print(f'{ator} {N_filmes}')\n",
+    "\n",
+    "\n",
+    "\n",
+    "#   linha = separar[2]\n",
+    "#  for line in f.readlines():\n",
+    "   #  print(linha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harrison Ford 41\n",
+      "Samuel L. Jackson 69\n",
+      "Morgan Freeman 61\n",
+      "Tom Hanks 44\n",
+      "Robert Downey Jr. 53\n",
+      "Eddie Murphy 38\n",
+      "Tom Cruise 36\n",
+      "Johnny Depp 45\n",
+      "Michael Caine 58\n",
+      "Scarlett Johansson 37\n",
+      "Gary Oldman 38\n",
+      "Robin Williams 49\n",
+      "Bruce Willis 60\n",
+      "Stellan Skarsgard 43\n",
+      "Anthony Daniels 7\n",
+      "Ian McKellen 31\n",
+      "Will Smith 24\n",
+      "Stanley Tucci 50\n",
+      "Matt Damon 39\n",
+      "Robert DeNiro 79\n",
+      "Cameron Diaz 34\n",
+      "Liam Neeson 63\n",
+      "Andy Serkis 23\n",
+      "Don Cheadle 34\n",
+      "Ben Stiller 37\n",
+      "Helena Bonham Carter 36\n",
+      "Orlando Bloom 17\n",
+      "Woody Harrelson 50\n",
+      "Cate Blanchett 39\n",
+      "Julia Roberts 42\n",
+      "Elizabeth Banks 35\n",
+      "Ralph Fiennes 36\n",
+      "Emma Watson 17\n",
+      "Tommy Lee Jones 46\n",
+      "Brad Pitt 40\n",
+      "Adam Sandler 32\n",
+      "Daniel Radcliffe 17\n",
+      "Jonah Hill 29\n",
+      "Owen Wilson 39\n",
+      "Idris Elba 26\n",
+      "Bradley Cooper 25\n",
+      "Mark Wahlberg 36\n",
+      "Jim Carrey 27\n",
+      "Dustin Hoffman 43\n",
+      "Leonardo DiCaprio 25\n",
+      "Jeremy Renner 21\n",
+      "Philip Seymour Hoffman 40\n",
+      "Sandra Bullock 35\n",
+      "Chris Evans 23\n",
+      "Anne Hathaway 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ETL\n",
+    "with open(\"DESAFIO-ETL/actors.csv\", \"r\") as csv:\n",
+    "  arquivo = csv.readlines()\n",
+    "  \n",
+    "\n",
+    "# carrega cada linha\n",
+    "for linha in linhas:\n",
+    "# divide em colunas\n",
+    "   colunas = linha.replace(\"\\\"Robert Downey, Jr.\\\"\", \"Robert Downey Jr.\").split(',')\n",
+    "   ator = colunas[0]\n",
+    "   Total_bruto = colunas[1]\n",
+    "   N_filmes = (colunas[2])\n",
+    "   media_filme = (colunas[3])\n",
+    "   primeiro_filme = colunas[4]\n",
+    "   bruto = (colunas[5])\n",
+    "\n",
+    "# Actor,Total Gross,Number of Movies,Average per Movie,#1 Movie,Gross\n",
+    "\n",
+    "#extrair pessoa com maior numero de filmes e o respectivo números de filmes\n",
+    "\n",
+    "   print(f'{ator} {N_filmes}')\n",
+    "\n",
+    "#   linha = separar[2]\n",
+    "#  for line in f.readlines():\n",
+    "   #  print(linha)\n"
    ]
   }
  ],
