--- a/Sprint-3/Curso-Python/Exercicios/testes.ipynb
+++ b/Sprint-3/Curso-Python/Exercicios/testes.ipynb
@@ -468,42 +468,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#desafio ETL\n",
-    "\n",
-    "with open(\"DESAFIO-ETL/actors.csv\", \"r\") as f:\n",
-    "  arquivo = f.read()\n",
-    "  linhas = arquivo.split(\"\\n\")[1:]\n",
+    "with open(\"DESAFIO-ETL/actors.csv\", \"r\") as csv:\n",
+    "  arquivo = csv.readlines()\n",
+    "  \n",
     "\n",
     "# carrega cada linha\n",
     "for linha in linhas:\n",
     "# divide em colunas\n",
-    "   colunas = linha.split(',')\n",
+    "   colunas = linha.replace(\"\\\"Robert Downey, Jr.\\\"\", \"Robert Downey Jr.\").split(',')\n",
     "   ator = colunas[0]\n",
-    "   Total_bruto = (colunas[1])\n",
+    "   Total_bruto = colunas[1]\n",
     "   N_filmes = (colunas[2])\n",
     "   media_filme = (colunas[3])\n",
     "   primeiro_filme = colunas[4]\n",
     "   bruto = (colunas[5])\n",
+    "   \n",
+    "\n",
     "# Actor,Total Gross,Number of Movies,Average per Movie,#1 Movie,Gross\n",
     "\n",
     "#extrair pessoa com maior numero de filmes e o respectivo números de filmes\n",
     "\n",
-    "  # print(f'{ator} {N_filmes}')\n",
     "\n",
-    "\n",
+    "   print(f'{ator} {(N_filmes)}')\n",
     "\n",
     "#   linha = separar[2]\n",
     "#  for line in f.readlines():\n",
-    "   #  print(linha)"
+    "   #  print(linha)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -575,16 +574,22 @@
     "   colunas = linha.replace(\"\\\"Robert Downey, Jr.\\\"\", \"Robert Downey Jr.\").split(',')\n",
     "   ator = colunas[0]\n",
     "   Total_bruto = colunas[1]\n",
-    "   N_filmes = (colunas[2])\n",
+    "   N_filmes = int(colunas[2])\n",
     "   media_filme = (colunas[3])\n",
     "   primeiro_filme = colunas[4]\n",
     "   bruto = (colunas[5])\n",
+    "   numero_mais_filmes = 1\n",
+    "   if N_filmes > numero_mais_filmes:\n",
+    "      numero_mais_filmes = N_filmes\n",
+    "      \n",
+    "\n",
     "\n",
     "# Actor,Total Gross,Number of Movies,Average per Movie,#1 Movie,Gross\n",
     "\n",
     "#extrair pessoa com maior numero de filmes e o respectivo números de filmes\n",
     "\n",
-    "   print(f'{ator} {N_filmes}')\n",
+    "\n",
+    "   print(f'{ator} {(numero_mais_filmes)}')\n",
     "\n",
     "#   linha = separar[2]\n",
     "#  for line in f.readlines():\n",
