adicionando arquivos de ETL com a resolução

--- a/Sprint-3/Curso-Python/Exercicios/testes.ipynb
+++ b/Sprint-3/Curso-Python/Exercicios/testes.ipynb
@@ -502,63 +502,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Harrison Ford 41\n",
-      "Samuel L. Jackson 69\n",
-      "Morgan Freeman 61\n",
-      "Tom Hanks 44\n",
-      "Robert Downey Jr. 53\n",
-      "Eddie Murphy 38\n",
-      "Tom Cruise 36\n",
-      "Johnny Depp 45\n",
-      "Michael Caine 58\n",
-      "Scarlett Johansson 37\n",
-      "Gary Oldman 38\n",
-      "Robin Williams 49\n",
-      "Bruce Willis 60\n",
-      "Stellan Skarsgard 43\n",
-      "Anthony Daniels 7\n",
-      "Ian McKellen 31\n",
-      "Will Smith 24\n",
-      "Stanley Tucci 50\n",
-      "Matt Damon 39\n",
-      "Robert DeNiro 79\n",
-      "Cameron Diaz 34\n",
-      "Liam Neeson 63\n",
-      "Andy Serkis 23\n",
-      "Don Cheadle 34\n",
-      "Ben Stiller 37\n",
-      "Helena Bonham Carter 36\n",
-      "Orlando Bloom 17\n",
-      "Woody Harrelson 50\n",
-      "Cate Blanchett 39\n",
-      "Julia Roberts 42\n",
-      "Elizabeth Banks 35\n",
-      "Ralph Fiennes 36\n",
-      "Emma Watson 17\n",
-      "Tommy Lee Jones 46\n",
-      "Brad Pitt 40\n",
-      "Adam Sandler 32\n",
-      "Daniel Radcliffe 17\n",
-      "Jonah Hill 29\n",
-      "Owen Wilson 39\n",
-      "Idris Elba 26\n",
-      "Bradley Cooper 25\n",
-      "Mark Wahlberg 36\n",
-      "Jim Carrey 27\n",
-      "Dustin Hoffman 43\n",
-      "Leonardo DiCaprio 25\n",
-      "Jeremy Renner 21\n",
-      "Philip Seymour Hoffman 40\n",
-      "Sandra Bullock 35\n",
-      "Chris Evans 23\n",
-      "Anne Hathaway 25\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'Number of Movies'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m ator \u001b[39m=\u001b[39m colunas[\u001b[39m0\u001b[39m]\n\u001b[0;32m     11\u001b[0m Total_bruto \u001b[39m=\u001b[39m colunas[\u001b[39m1\u001b[39m]\n\u001b[1;32m---> 12\u001b[0m N_filmes \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(colunas[\u001b[39m2\u001b[39;49m])\n\u001b[0;32m     13\u001b[0m media_filme \u001b[39m=\u001b[39m (colunas[\u001b[39m3\u001b[39m])\n\u001b[0;32m     14\u001b[0m primeiro_filme \u001b[39m=\u001b[39m colunas[\u001b[39m4\u001b[39m]\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'Number of Movies'"
      ]
     }
    ],
@@ -569,7 +524,7 @@
     "  \n",
     "\n",
     "# carrega cada linha\n",
-    "for linha in linhas:\n",
+    "for linha in arquivo:\n",
     "# divide em colunas\n",
     "   colunas = linha.replace(\"\\\"Robert Downey, Jr.\\\"\", \"Robert Downey Jr.\").split(',')\n",
     "   ator = colunas[0]\n",
@@ -578,10 +533,17 @@
     "   media_filme = (colunas[3])\n",
     "   primeiro_filme = colunas[4]\n",
     "   bruto = (colunas[5])\n",
-    "   numero_mais_filmes = 1\n",
-    "   if N_filmes > numero_mais_filmes:\n",
-    "      numero_mais_filmes = N_filmes\n",
-    "      \n",
+    "\n",
+    "   maior_numero_filmes = 0\n",
+    "   ator_com_mais_filmes = ''\n",
+    "   \n",
+    "   for  maior_numero_filmes in colunas[2]:\n",
+    "      if int(colunas[2]) > maior_numero_filmes:\n",
+    "         maior_numero_filmes = int(colunas[2])\n",
+    "   \n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# Actor,Total Gross,Number of Movies,Average per Movie,#1 Movie,Gross\n",
@@ -589,11 +551,146 @@
     "#extrair pessoa com maior numero de filmes e o respectivo números de filmes\n",
     "\n",
     "\n",
-    "   print(f'{ator} {(numero_mais_filmes)}')\n",
+    "   print(f'{ator} {(maior_numero_filmes)}')\n",
     "\n",
     "#   linha = separar[2]\n",
     "#  for line in f.readlines():\n",
     "   #  print(linha)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robert DeNiro 79\n"
+     ]
+    }
+   ],
+   "source": [
+    "#quest 1\n",
+    "import csv\n",
+    "\n",
+    "with open(\"DESAFIO-ETL/actors.csv\") as f:\n",
+    "    arquivo = csv.reader(f)\n",
+    "    next(arquivo)  # pula a primeira linha, que contém os nomes das colunas\n",
+    "    lista = []\n",
+    "    for linha in arquivo:\n",
+    "        actor = linha[0]\n",
+    "        num_movies = int(linha[2])\n",
+    "        lista.append({'actor': actor, 'num_movies': num_movies})\n",
+    "    \n",
+    "ordem_lista = sorted(lista, key=lambda x: x['num_movies'], reverse=True)\n",
+    "\n",
+    "print(ordem_lista[0]['actor'], ordem_lista[0]['num_movies'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média de filmes por ator: 37.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "#quest 2\n",
+    "\n",
+    "import csv\n",
+    "\n",
+    "with open(\"DESAFIO-ETL/actors.csv\") as f:\n",
+    "    arquivo = csv.reader(f)\n",
+    "    next(arquivo)  # pula a primeira linha, que contém os nomes das colunas\n",
+    "    lista = []\n",
+    "    for linha in arquivo:\n",
+    "        actor = linha[0]\n",
+    "        num_movies = int(linha[2])\n",
+    "        lista.append({'actor': actor, 'num_movies': num_movies})\n",
+    "\n",
+    "# Calcula a média do número de filmes por ator\n",
+    "num_ator = len(lista)\n",
+    "total_movies = sum([d['num_movies'] for d in lista])\n",
+    "avg_movies = total_movies / num_ator\n",
+    "print(f\"Média de filmes por ator: {avg_movies:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anthony Daniels 451.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#quest 3: O ator/atriz com a maior média por filme.\n",
+    "\n",
+    "import csv\n",
+    "\n",
+    "with open(\"DESAFIO-ETL/actors.csv\") as f:\n",
+    "    arquivo = csv.reader(f)\n",
+    "    next(arquivo)  # pula a primeira linha, que contém os nomes das colunas\n",
+    "    lista = []\n",
+    "    for linha in arquivo:\n",
+    "        actor = linha[0]\n",
+    "        avg_movie = float(linha[3])\n",
+    "        lista.append({'actor': actor, 'avg_movie': avg_movie})\n",
+    "    \n",
+    "ordem_lista = sorted(lista, key=lambda x: x['avg_movie'], reverse=True)\n",
+    "\n",
+    "print(ordem_lista[0]['actor'], ordem_lista[0]['avg_movie'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O filme mais frequente é \"The Avengers\", com uma frequência igual a 6.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#quest 4\n",
+    "\n",
+    "import csv\n",
+    "\n",
+    "with open('DESAFIO-ETL/actors.csv') as f:\n",
+    "    arquivo = csv.DictReader(f)\n",
+    "    lista = [linha for linha in arquivo]\n",
+    "\n",
+    "# Contar frequência dos filmes\n",
+    "filme_freq = {}\n",
+    "for linha in lista:\n",
+    "    filme = linha['#1 Movie']\n",
+    "    if filme in filme_freq:\n",
+    "        filme_freq[filme] += 1\n",
+    "    else:\n",
+    "        filme_freq[filme] = 1\n",
+    "\n",
+    "# Encontrar o filme mais frequente\n",
+    "maior_freq_filme = max(filme_freq, key=filme_freq.get)\n",
+    "freq = filme_freq[maior_freq_filme]\n",
+    "\n",
+    "print(f'O filme mais frequente é \"{maior_freq_filme}\", com uma frequência igual a {freq}.')"
    ]
   }
  ],
