adicionando material de apoio de docker

--- a/Sprint-3/Curso-Python/Exercicios/testes.ipynb
+++ b/Sprint-3/Curso-Python/Exercicios/testes.ipynb
@@ -591,10 +591,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'actor': 'Robert DeNiro', 'num_movies': 79}, {'actor': 'Samuel L. Jackson', 'num_movies': 69}, {'actor': 'Liam Neeson', 'num_movies': 63}, {'actor': 'Morgan Freeman', 'num_movies': 61}, {'actor': 'Bruce Willis', 'num_movies': 60}, {'actor': 'Michael Caine', 'num_movies': 58}, {'actor': 'Robert Downey, Jr.', 'num_movies': 53}, {'actor': 'Stanley Tucci', 'num_movies': 50}, {'actor': 'Woody Harrelson', 'num_movies': 50}, {'actor': 'Robin Williams', 'num_movies': 49}, {'actor': 'Tommy Lee Jones', 'num_movies': 46}, {'actor': 'Johnny Depp', 'num_movies': 45}, {'actor': 'Tom Hanks', 'num_movies': 44}, {'actor': 'Stellan Skarsgard', 'num_movies': 43}, {'actor': 'Dustin Hoffman', 'num_movies': 43}, {'actor': 'Julia Roberts', 'num_movies': 42}, {'actor': 'Harrison Ford', 'num_movies': 41}, {'actor': 'Brad Pitt', 'num_movies': 40}, {'actor': 'Philip Seymour Hoffman', 'num_movies': 40}, {'actor': 'Matt Damon', 'num_movies': 39}, {'actor': 'Cate Blanchett', 'num_movies': 39}, {'actor': 'Owen Wilson', 'num_movies': 39}, {'actor': 'Eddie Murphy', 'num_movies': 38}, {'actor': 'Gary Oldman', 'num_movies': 38}, {'actor': 'Scarlett Johansson', 'num_movies': 37}, {'actor': 'Ben Stiller', 'num_movies': 37}, {'actor': 'Tom Cruise', 'num_movies': 36}, {'actor': 'Helena Bonham Carter', 'num_movies': 36}, {'actor': 'Ralph Fiennes', 'num_movies': 36}, {'actor': 'Mark Wahlberg', 'num_movies': 36}, {'actor': 'Elizabeth Banks', 'num_movies': 35}, {'actor': 'Sandra Bullock', 'num_movies': 35}, {'actor': 'Cameron Diaz', 'num_movies': 34}, {'actor': 'Don Cheadle', 'num_movies': 34}, {'actor': 'Adam Sandler', 'num_movies': 32}, {'actor': 'Ian McKellen', 'num_movies': 31}, {'actor': 'Jonah Hill', 'num_movies': 29}, {'actor': 'Jim Carrey', 'num_movies': 27}, {'actor': 'Idris Elba', 'num_movies': 26}, {'actor': 'Bradley Cooper', 'num_movies': 25}, {'actor': 'Leonardo DiCaprio', 'num_movies': 25}, {'actor': 'Anne Hathaway', 'num_movies': 25}, {'actor': 'Will Smith', 'num_movies': 24}, {'actor': 'Andy Serkis', 'num_movies': 23}, {'actor': 'Chris Evans', 'num_movies': 23}, {'actor': 'Jeremy Renner', 'num_movies': 21}, {'actor': 'Orlando Bloom', 'num_movies': 17}, {'actor': 'Emma Watson', 'num_movies': 17}, {'actor': 'Daniel Radcliffe', 'num_movies': 17}, {'actor': 'Anthony Daniels', 'num_movies': 7}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open(\"DESAFIO-ETL/actors.csv\") as f:\n",
+    "    arquivo = csv.reader(f)\n",
+    "    next(arquivo)  # pula a primeira linha, que contém os nomes das colunas\n",
+    "    lista = []\n",
+    "    for row in arquivo:\n",
+    "        actor = row[0]\n",
+    "        num_movies = int(row[2])\n",
+    "        lista.append({'actor': actor, 'num_movies': num_movies})\n",
+    "    \n",
+    "ordem_lista = sorted(lista, key=lambda x: x['num_movies'], reverse=True)\n",
+    "\n",
+    "print(ordem_lista)"
+   ]
   },
   {
    "cell_type": "code",
